tests/paczka1/fuzzy1/34836119.err
Error in line 13: 7PauxI S582 -2,8
Error in line 6: AZD S886 34,3
Error in line 18: NOS S886 93,4
Error in line 21: NOS S582 41,6
Error in line 5: 7PauxI S582 62,4
Error in line 26: 7PauxI A259 83,2
Error in line 12: NuwQWHEJWJ6 A259 73,4
Error in line 34: 7PauxI S582 15,5
